--- a/style.css
+++ b/style.css
@@ -1,7 +1,184 @@
 body {
-    background-color: azure;
+    background-color: #f2f4eb;
 }
-h1 {
-    color: red;
+
+.coffees,
+.chocolates,
+.appliances {
     text-align: center;
+}
+
+.block {
+    width: 90%;
+    height: 350px;
+    padding: 10px;
+    margin: 10px;
+    display: block;
+    border: solid #a2d5db 2px;
+    background-color: #eff2f5;
+}
+
+.block:hover {
+    background-color: #e1e3e1;
+}
+
+h1,
+h2 {
+    font-family: "Raleway", sans-serif;
+}
+
+img {
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    border: solid green 2px;
+}
+
+button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 120px;
+    height: 30px;
+    color: #3b3a38;
+    border: none;
+    background-color: #89d177;
+    border-radius: 10px;
+    font-family: "Verdana", sans serif;
+    font-weight: bold;
+}
+
+button:hover {
+    background-color: #62bf4b;
+    border-radius: 15px;
+    box-shadow: 0 12px 10px 0 rgba(0, 0, 0, 0.24),
+        0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+button:active {
+    transform: translateY(4px);
+}
+
+.top-nav {
+    background-color: #a2d5db;
+    overflow: hidden;
+    font-family: "Raleway", sans-serif;
+    padding: 15px;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+}
+
+#title {
+    width: 90%;
+    margin: 8px;
+    margin-bottom: 15px;
+}
+
+.top-nav a {
+    display: inline-block;
+    float: center;
+    color: black;
+    text-align: center;
+    padding: 12px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    width: 100%;
+}
+
+.top-nav a:hover {
+    background-color: #ddd;
+    color: black;
+    border-bottom: solid white 5px;
+    margin-bottom: -5px;
+}
+
+.top-nav a:active {
+    background-color: #04aa6d;
+    color: white;
+}
+
+ul {
+    margin: 50px;
+    padding: 50px;
+    border: solid #a2d5db 2px;
+}
+
+li {
+    font-size: 1.15em;
+    font-family: "Raleway", sans-serif;
+}
+
+.total {
+    font-family: "Raleway", sans-serif;
+    text-align: center;
+    font-size: 1.6em;
+}
+
+footer {
+    margin-top: 210px;
+}
+
+#continue-shopping {
+    font-size: 17px;
+    width: 200px;
+    height: 40px;
+}
+
+@media only screen and (min-width: 600px) {
+    .block {
+        width: 40%;
+        height: 350px;
+        display: inline-block;
+    }
+
+    .top-nav h1 {
+        display: inline-block;
+        width: 18%;
+        margin: 8px;
+        float: left;
+    }
+
+    .top-nav a {
+        float: right;
+        color: black;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+    }
+}
+
+@media only screen and (min-width: 1100px) {
+    .block {
+        width: 25%;
+        height: 350px;
+    }
+
+    .top-nav {
+        background-color: #a2d5db;
+        overflow: hidden;
+        font-family: "Raleway", sans-serif;
+        padding: 15px;
+        width: 100%;
+    }
+
+    .top-nav a {
+        float: right;
+        color: black;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        width: 10%;
+        margin-top: 40px;
+    }
+
+    #title {
+        padding: 15px;
+        margin: 8px;
+        margin-top: 20px;
+        float: left;
+        width: 20%;
+    }
 }
