--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     text-align: center;
 }
 
-.block {
+.card {
     width: 90%;
     height: 350px;
     padding: 10px;
@@ -18,7 +18,7 @@ body {
     background-color: #eff2f5;
 }
 
-.block:hover {
+.card:hover {
     background-color: #e1e3e1;
 }
 
@@ -126,7 +126,7 @@ footer {
 }
 
 @media only screen and (min-width: 600px) {
-    .block {
+    .card {
         width: 40%;
         height: 350px;
         display: inline-block;
@@ -150,7 +150,7 @@ footer {
 }
 
 @media only screen and (min-width: 1100px) {
-    .block {
+    .card {
         width: 25%;
         height: 350px;
     }
