--- a/style.css
+++ b/style.css
@@ -34,6 +34,40 @@ img {
     border: solid green 2px;
 }
 
+.top-nav {
+    background-color: #a2d5db;
+    overflow: hidden;
+    font-family: "Raleway", sans-serif;
+    padding: 15px;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+}
+
+.top-nav button {
+    all: initial;
+    display: inline-block;
+    float: center;
+    color: black;
+    text-align: center;
+    padding: 12px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    width: 100%;
+}
+
+.top-nav button:hover {
+    background-color: #ddd;
+    color: black;
+    border-bottom: solid white 5px;
+    margin-bottom: -5px;
+}
+
+.top-nav button:active {
+    background-color: #04aa6d;
+    color: white;
+}
+
 button {
     display: block;
     margin-left: auto;
@@ -59,43 +93,10 @@ button:active {
     transform: translateY(4px);
 }
 
-.top-nav {
-    background-color: #a2d5db;
-    overflow: hidden;
-    font-family: "Raleway", sans-serif;
-    padding: 15px;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-}
-
 #title {
     width: 90%;
     margin: 8px;
     margin-bottom: 15px;
-}
-
-.top-nav button {
-    display: inline-block;
-    float: center;
-    color: black;
-    text-align: center;
-    padding: 12px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    width: 100%;
-}
-
-.top-nav button:hover {
-    background-color: #ddd;
-    color: black;
-    border-bottom: solid white 5px;
-    margin-bottom: -5px;
-}
-
-.top-nav button:active {
-    background-color: #04aa6d;
-    color: white;
 }
 
 ul {
@@ -140,6 +141,7 @@ footer {
     }
 
     .top-nav button {
+        all: initial;
         float: right;
         color: black;
         text-align: center;
@@ -164,6 +166,7 @@ footer {
     }
 
     .top-nav button {
+        all: initial;
         float: right;
         color: black;
         text-align: center;
